Melhorias visuais, responsividade, integração de logo e paleta personalizada

--- a/views/scoreboard.html
+++ b/views/scoreboard.html
@@ -1,6 +1,6 @@
 <!-- Arquivo: views/scoreboard.html -->
 <div class="scoreboard-container">
-    <img src="assets/img/ifto.jpg" alt="Logo IFTO" class="ifto-logo">
+    <img src="assets/img/ifto.jpg" alt="Logo" class="veiga-logo">
     
     <div class="game-over">⏱️ Tempo esgotado! Fim do jogo!</div>
 
